fixed translated overflow

--- a/src/less/blocks/_tpl1.less
+++ b/src/less/blocks/_tpl1.less
@@ -85,6 +85,7 @@ body {
 	}
 	
 	&-contentItem {
+		overflow: hidden;
 		transition: .2s;
 	}
 	
